From a support ticket: new page is missing <TITLE>

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -733,6 +733,7 @@ de:
     edit_projects: Projekt bearbeiten
     index_people: Personen
     new_users: Registrieren
+    new_pages: Neue Seite
     create_users: Registrieren
     edit_users: Bearbeiten
     welcome_users: Willkommen!
