--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -733,6 +733,7 @@ en:
     edit_projects: Edit Project
     index_people: People
     new_users: Signup
+    new_pages: New Page
     create_users: Signup
     edit_users: Edit
     welcome_users: Welcome!
