--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -733,6 +733,7 @@ es:
     edit_projects: Edit Project
     index_people: Personas
     new_users: Crear cuenta
+    new_pages: Página nueva
     create_users: Crear cuenta
     edit_users: Editar
     welcome_users: ¡Bienvenido!
