--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -733,6 +733,7 @@ fr:
     edit_projects: Editer Projet
     index_people: Personnes
     new_users: Créer un compte
+    new_pages: Nouvelle page
     create_users: Créer un compte
     edit_users: Editer
     welcome_users: Bienvenue!
