shows the number of archived tasks in the "Show x archived tasks" link in each task list panel

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -358,8 +358,12 @@ ca:
     link:
       new: + Nova tasca
       edit: Editar
-      show_archived_tasks: "Show archived tasks"
-      hide_archived_tasks: "Hide archived tasks"
+      show_archived_tasks:
+        one: "Show 1 archived task"
+        other: "Show {{count}} archived tasks"
+      hide_archived_tasks:
+        one: "Hide 1 archived task"
+        other: "Hide {{count}} archived tasks"
     destroy_message:
       deleted: "La tasca <b>{{name}}</b> s'ha esborrat"
     archive_message:
