includes "Tasks for next two weeks" in daily task reminder email

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -189,6 +189,7 @@ en:
       late_tasks: "Late tasks"
       tasks_for_today: "Tasks for today"
       tasks_for_tomorrow: "Tasks for tomorrow"
+      tasks_for_next_two_weeks: "Tasks for next two weeks"
   projects:
     index:
       title: News feed for all your projects
