--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -184,6 +184,13 @@ ca:
       complete_your_profile: Així el teus companys estaran al dia de le teves dades de contacte.
       completeness: "Complert en un {{percentage}}%"
       to_get_to: per a
+    daily_task_reminder_email:
+      daily_task_reminder: "Daily task reminder"
+      late_tasks: "Late tasks"
+      tasks_for_today: "Tasks for today"
+      tasks_for_tomorrow: "Tasks for tomorrow"
+      tasks_for_next_two_weeks: "Tasks for next two weeks"
+      tasks_without_a_due_date: "Tasks without a due date"
   projects:
     index:
       title: Activitat en tots els teus projectes
