--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -184,6 +184,13 @@ it:
       complete_your_profile: Così i tuoi colleghi avranno i tuoi dati di contatto aggiornati.
       completeness: "Completo al {{percentage}}%"
       to_get_to: per
+    daily_task_reminder_email:
+      daily_task_reminder: "Daily task reminder"
+      late_tasks: "Late tasks"
+      tasks_for_today: "Tasks for today"
+      tasks_for_tomorrow: "Tasks for tomorrow"
+      tasks_for_next_two_weeks: "Tasks for next two weeks"
+      tasks_without_a_due_date: "Tasks without a due date"
   projects:
     index:
       title: Attività in tutti i tuoi progetti
