--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -314,6 +314,7 @@ fr:
       subscribe_note: Ces personnes recevront une notification par mail de ce message et des commentaires ultérieurs.<br/>Vous pouvez arrêter de suivre cette conversation à tout moment.
       invite_users: Vous êtes l'unique utilisateur dans ce projet!
       no_users_yet: "Les conversations sont plus utiles lorsqu'il y a plusieurs personnes. <a href='{{invite_link}}'>Invitez d'autres personnes</a> à se joindre à ce projet afin qu'ils puissent lire, commenter et recevoir les actualisations de cette conversation."
+      people_all: "All people in project"
     edit:
       submit: 'Modifier'
     index:
