Javascript posted_date rewrite

--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -812,6 +812,7 @@ ca:
 
   # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
+    time_ago: "Hace {{time_ago_in_words}}"
     distance_in_words:
       half_a_minute: "mig minut"
       less_than_x_seconds:
