--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -817,6 +817,7 @@ es:
 
   # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
+    time_ago: "Hace {{time_ago_in_words}}"
     distance_in_words:
       half_a_minute: "medio minuto"
       less_than_x_seconds:
