--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -817,6 +817,7 @@ de:
 
   # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
+    time_ago: "{{time_ago_in_words}} vorher"
     distance_in_words:
       half_a_minute: "halbe Minute"
       less_than_x_seconds:
