--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -817,6 +817,7 @@ en:
 
   # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
+    time_ago: "{{time_ago_in_words}} ago"
     distance_in_words:
       half_a_minute: "half a minute"
       less_than_x_seconds:
