--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -812,6 +812,7 @@ it:
 
   # Used in distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   datetime:
+    time_ago: "{{time_ago_in_words}} fa"
     distance_in_words:
       half_a_minute: "mezzo minuto"
       less_than_x_seconds:
