--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -471,7 +471,11 @@ ca:
       title: Totes les tasques arxivades
       description: "Aquestes són les tasques arxivades, han estat completades o rebutjades"
     fields:
-      name: Nom
+      #####
+      task_list: A task lists defines a milestone for your project. Inside a task list you can create Tasks and assign them to people.
+      name: Task List name
+      start_on: Starts on... <i>optional</i>
+      finish_on: End on... <i>optional</i>
     link:
       new: Nova llista de tasques
       edit: Editar
