--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -471,7 +471,11 @@ fr:
       title: Toutes les tâches archivées
       description: "Ce sont les tâches archivées, qui ont été soit achevées soit annulées."
     fields:
-      name: Nom
+      #####
+      task_list: A task lists defines a milestone for your project. Inside a task list you can create Tasks and assign them to people.
+      name: Task List name
+      start_on: Starts on... <i>optional</i>
+      finish_on: End on... <i>optional</i>
     link:
       new: Nouvelle liste de tâches
       edit: Editer
